@@ -38,7 +38,8 @@ Additions:
    * Add APIs - elm_object_domain_translatable_part_text_set(), elm_object_translatable_part_text_get().
    * Add APIs - elm_object_orientation_mode_disabled_set(), elm_object_orientation_mode_disabled_get().
    * Add the reorder effect in toolbar.
-   * Support naviframe, label, button orientation mode.
+   * Added new APIs elm_transit_tween_mode_facator_set()/get()
+   * Support widget orientation mode in order to widgets have multiple styles for each window degree.
 
 Improvements:
 
@@ -66,9 +67,9 @@ Improvements:
    in most case they don't need all parts at the same time.
    * Enhanced diskselector add and item_append time.
    * Expand elm_transit_tween_mode ELM_TRANSIT_TWEEN_MODE_DIVISOR_INTERP, ELM_TRANSIT_TWEEN_MODE_BOUNCE, ELM_TRANSIT_TWEEN_MODE_SPRING
-   * Added new APIs elm_transit_tween_mode_facator_set()/get()
    * Ctxpopup will be dismissed when language is changed.
    * Popup is now a focusable object.
+   * Improve naviframe to not apply items' style multiple times when theme/styles are changed.
 
 Fixes:
 
