@@ -1025,3 +1025,7 @@
 2013-02-16  Paulo C. A. Cavalcanti Jr
 
 	* Fix elm_config to properly check file type.
+
+2013-02-16  ChunEon Park (Hermet)
+
+        * Improve naviframe to not apply items'style multiple times.
